--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>vue-js-client-crud</title>
+    <link rel="icon" href="<%= BASE_URL %>57x57.webp">
+    <title>Rosario 12 Pauta</title>
     <link type="text/css" rel="stylesheet" href="//unpkg.com/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" />
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but vue-js-client-crud doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but Rosario 12 Pauta doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
